!!! Update owner name and internal links

--- a/css/feedzy-rss-feeds.css
+++ b/css/feedzy-rss-feeds.css
@@ -1,7 +1,7 @@
 /**
- * Plugin Name: FEEDZY RSS Feeds by b*web
- * Plugin URI: http://b-website.com/
- * Author: Brice CAPOBIANCO
+ * Plugin Name: FEEDZY RSS Feeds
+ * Plugin URI: http://themeisle.com/plugins/feedzy-rss-feeds/
+ * Author: Themeisle
  */
 .feedzy-rss > ul {
 	margin: 0;
