--- a/css/feedzy-rss-feeds.css
+++ b/css/feedzy-rss-feeds.css
@@ -1,4 +1,8 @@
 /**
+ * style.css
+ * Feedzy RSS Feed
+ * Copyright: (c) 2016 Themeisle, themeisle.com
+ * Version: 3.0.0
  * Plugin Name: FEEDZY RSS Feeds
  * Plugin URI: http://themeisle.com/plugins/feedzy-rss-feeds/
  * Author: Themeisle
