--- a/css/feedzy-rss-feeds.css
+++ b/css/feedzy-rss-feeds.css
@@ -11,6 +11,8 @@
 	margin: 0;
 	padding: 0;
 }
+
+/*noinspection CssUnusedSymbol*/
 .feedzy-rss .rss_item {
 	list-style: none;
 	border-bottom: 1px solid #eee;
@@ -18,11 +20,15 @@
 .feedzy-rss .rss_item .title {
 	font-weight: bold;
 }
+
+/*noinspection CssUnusedSymbol*/
 .feedzy-rss .rss_item:after{
 	content:'';
 	display:block;
 	clear: both;
 }
+
+/*noinspection CssUnusedSymbol*/
 .feedzy-rss .rss_item .rss_image {
 	float: left;
 	text-decoration: none;
@@ -35,6 +41,8 @@
 	background-position: 50%;
 	position: absolute;
 }
+
+/*noinspection CssUnusedSymbol*/
 .feedzy-rss .rss_item .rss_image {
 	margin: 0.3em 1em 0 0;
 }
@@ -45,7 +53,7 @@
 }
 
 /*TinyMce UI button*/
+/*noinspection CssUnusedSymbol*/
 i.mce-i-feedzy-icon {
-	background-image:  url('../img/feedzy.png');
 	background-image:  none, url('../img/feedzy.svg'), url('../img/feedzy.png');
 }
