--- a/css/feedzy-rss-feeds.css
+++ b/css/feedzy-rss-feeds.css
@@ -14,46 +14,49 @@
 
 /*noinspection CssUnusedSymbol*/
 .feedzy-rss .rss_item {
-	list-style: none;
 	border-bottom: 1px solid #eee;
+	list-style: none;
 }
+
 .feedzy-rss .rss_item .title {
 	font-weight: bold;
 }
 
 /*noinspection CssUnusedSymbol*/
-.feedzy-rss .rss_item:after{
-	content:'';
-	display:block;
+.feedzy-rss .rss_item:after {
+	display: block;
 	clear: both;
+	content: "";
 }
 
 /*noinspection CssUnusedSymbol*/
 .feedzy-rss .rss_item .rss_image {
 	float: left;
-	text-decoration: none;
+	position: relative;
 	border: none;
-	position:relative;
+	text-decoration: none;
 }
-.feedzy-rss .rss_item .rss_image span{
-	display:inline-block;
-	background-size: cover;
-	background-position: 50%;
+
+.feedzy-rss .rss_item .rss_image span {
+	display: inline-block;
 	position: absolute;
+	background-position: 50%;
+	background-size: cover;
 }
 
 /*noinspection CssUnusedSymbol*/
 .feedzy-rss .rss_item .rss_image {
 	margin: 0.3em 1em 0 0;
 }
+
 .feedzy-rss .rss_item .rss_content small {
 	display: block;
 	font-size: 0.9em;
-	font-style:italic;
+	font-style: italic;
 }
 
 /*TinyMce UI button*/
 /*noinspection CssUnusedSymbol*/
 i.mce-i-feedzy-icon {
-	background-image:  none, url('../img/feedzy.svg'), url('../img/feedzy.png');
+	background-image: none, url("../img/feedzy.svg"), url("../img/feedzy.png");
 }
