--- a/css/feedzy-rss-feeds.css
+++ b/css/feedzy-rss-feeds.css
@@ -60,3 +60,51 @@
 i.mce-i-feedzy-icon {
 	background-image: none, url("../img/feedzy.svg"), url("../img/feedzy.png");
 }
+
+#feedzy-rss-button-insert {
+	color: #fff;
+	background-color: #5cb85c;
+	border-color: #4cae4c;
+}
+
+#feedzy-rss-button-insert button {
+	color: #fff;
+}
+
+#feedzy-rss-button-insert:hover, #feedzy-rss-button-insert:focus {
+	color: #fff;
+	background-color: #449d44;
+	border-color: #398439;
+}
+
+#feedzy-rss-button-cancel {
+	color: #333;
+	background-color: #fff;
+	border-color: #ccc;
+}
+
+#feedzy-rss-button-cancel button {
+	color: #333;
+}
+
+#feedzy-rss-button-cancel:hover, #feedzy-rss-button-cancel:focus {
+	color: #333;
+	background-color: #e6e6e6;
+	border-color: #adadad;
+}
+
+#feedzy-rss-button-pro {
+	color: #fff;
+	background-color: #5bc0de;
+	border-color: #46b8da;
+}
+
+#feedzy-rss-button-pro button {
+	color: #fff;
+}
+
+#feedzy-rss-button-pro:hover, #feedzy-rss-button-pro:focus {
+	color: #fff;
+	background-color: #31b0d5;
+	border-color: #269abc;
+}
