--- a/css/form.css
+++ b/css/form.css
@@ -593,6 +593,7 @@ th:last-child {
 }
 
 p {
+	font-size: 1.4rem;
 	margin-top: 0;
 }
 
@@ -633,6 +634,7 @@ h5 {
 	font-size: 1.8rem;
 	line-height: 1.5;
 	letter-spacing: -0.05rem;
+	border-bottom: 1px solid #31b0d5;
 }
 
 h6 {
@@ -685,27 +687,21 @@ img {
 	float: right;
 }
 
-/*.feedzy-popup-form input, .feedzy-popup-form select {*/
-/*width: 100%;*/
-/*line-height: 1.4em;*/
-/*background-color: #fff;*/
-/*height: 1.8em;*/
-/*font-size: 0.8em;*/
-/*margin: 0;*/
-/*padding: 4px;*/
-/*display: block;*/
-/*box-sizing: border-box;*/
-/*}*/
+.feedzy_section_pro {
+	background-color: #FEFEFE;
+}
 
-/*.feedzy-popup-form, .feedzy-popup-form .row {*/
-/*display: block;*/
-/*width: 100%;*/
-/*height: 100%;*/
-/*}*/
-/*.feedzy-popup-form .row .col-md-6 {*/
-/*display: inline-block;*/
-/*width: 45%;*/
-/*margin-left: 2.2%;*/
-/*margin-right: 2.2%;*/
-/*margin-bottom: 15px;*/
-/*}*/
+.feedzy_section_pro h5 {
+	color: #D9A404;
+	border-bottom-color: #D9A404;
+}
+
+.feedzy_pro_tag {
+	padding: 3px 6px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	margin-left: 10px;
+	background-color: #D9A404;
+	color: #FFFFFF;
+}
