--- a/css/form.css
+++ b/css/form.css
@@ -593,8 +593,8 @@ th:last-child {
 }
 
 p {
-	font-size: 1.4rem;
 	margin-top: 0;
+	font-size: 1.4rem;
 }
 
 h1,
@@ -631,10 +631,10 @@ h4 {
 }
 
 h5 {
+	border-bottom: 1px solid #31b0d5;
 	font-size: 1.8rem;
 	line-height: 1.5;
 	letter-spacing: -0.05rem;
-	border-bottom: 1px solid #31b0d5;
 }
 
 h6 {
@@ -688,20 +688,18 @@ img {
 }
 
 .feedzy_section_pro {
-	background-color: #FEFEFE;
+	background-color: #fefefe;
 }
 
 .feedzy_section_pro h5 {
-	color: #D9A404;
-	border-bottom-color: #D9A404;
+	border-bottom-color: #d9a404;
+	color: #d9a404;
 }
 
 .feedzy_pro_tag {
-	padding: 3px 6px;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
 	margin-left: 10px;
-	background-color: #D9A404;
-	color: #FFFFFF;
+	padding: 3px 6px;
+	border-radius: 3px;
+	color: #fff;
+	background-color: #d9a404;
 }
