--- a/css/feedzy-rss-feeds.css
+++ b/css/feedzy-rss-feeds.css
@@ -14,17 +14,8 @@
 
 /*noinspection CssUnusedSymbol*/
 .feedzy-rss .rss_item {
-	display: inline-block;
-	float: left;
+	border-bottom: 1px solid #eee;
 	list-style: none;
-}
-
-.feedzy-rss .rss_wrapper {
-	display: table;
-}
-
-.feedzy-rss .rss_content p {
-	word-break: break-word;
 }
 
 .feedzy-rss .rss_item .title {
@@ -32,42 +23,35 @@
 }
 
 /*noinspection CssUnusedSymbol*/
-.feedzy-rss .rss_item .rss_image {
-	display: table-cell;
-	float: left;
-	padding-top: 0.3em;
+.feedzy-rss .rss_item:after {
+	display: block;
+	clear: both;
+	content: "";
 }
 
-.feedzy-rss .rss_item .rss_image a {
-	display: inline-block;
+/*noinspection CssUnusedSymbol*/
+.feedzy-rss .rss_item .rss_image {
+	float: left;
 	position: relative;
-	max-width: 100%;
 	border: none;
 	text-decoration: none;
 }
 
-.feedzy-rss .rss_item .rss_image a span {
+.feedzy-rss .rss_item .rss_image span {
 	display: inline-block;
 	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
 	background-position: 50%;
 	background-size: cover;
 }
 
-.feedzy-rss .rss_item .rss_content_wrap {
-	display: table-cell;
-	width: auto;
-	padding-left: 1em;
-	vertical-align: top;
-	word-wrap: break-word;
+/*noinspection CssUnusedSymbol*/
+.feedzy-rss .rss_item .rss_image {
+	margin: 0.3em 1em 0 0;
 }
 
 .feedzy-rss .rss_item .rss_content small {
 	display: block;
-	font-size: 80%;
+	font-size: 0.9em;
 	font-style: italic;
 }
 
