--- a/css/feedzy-rss-feeds.css
+++ b/css/feedzy-rss-feeds.css
@@ -42,6 +42,8 @@
 	position: absolute;
 	background-position: 50%;
 	background-size: cover;
+	width:100%;
+	height:100%;
 }
 
 /*noinspection CssUnusedSymbol*/
@@ -135,7 +137,6 @@ i.mce-i-feedzy-icon {
 }
 
 .feedzy-rss .rss_item {
-	float: left;
 	margin: 2%;
 	padding: 0;
 }
