#26 Fixed image issue when rss one is not available

--- a/css/feedzy-rss-feeds.css
+++ b/css/feedzy-rss-feeds.css
@@ -47,6 +47,9 @@
 }
 
 /*noinspection CssUnusedSymbol*/
+.feedzy-rss .rss_item .rss_image .fetched {
+	z-index: 999;
+}
 .feedzy-rss .rss_item .rss_image {
 	margin: 0.3em 1em 0 0;
 }
@@ -169,7 +172,6 @@ i.mce-i-feedzy-icon {
 }
 
 .feedzy-rss .feedzy-style1 .rss_item .rss_image span {
-	position: relative;
 	width: 100%;
 }
 
@@ -186,7 +188,6 @@ i.mce-i-feedzy-icon {
 }
 
 .feedzy-rss .feedzy-style2 .rss_item .rss_image span {
-	position: relative;
 	width: 100%;
 }
 
@@ -264,6 +265,9 @@ i.mce-i-feedzy-icon {
 	border-radius: 5px;
 }
 
+.feedzy-rss .feedzy-style2 .rss_image span {
+	left:0px;
+}
 .feedzy-rss .feedzy-style2 .rss_image,
 .feedzy-rss .feedzy-style2 .rss_content_wrap {
 	display: inline-block;
