--- a/css/form.css
+++ b/css/form.css
@@ -723,6 +723,7 @@ img {
 	background: url(../img/feedzy-style2-template.jpg) no-repeat bottom center;
 }
 
-input[disabled],select[disabled]{
+input[disabled],
+select[disabled] {
 	cursor: not-allowed;
 }
