fixed compatibility with site origin Fixed design for default with pro active

--- a/css/feedzy-rss-feeds.css
+++ b/css/feedzy-rss-feeds.css
@@ -346,7 +346,9 @@ i.mce-i-feedzy-icon {
 }
 
 /* Columns */
-.feedzy-rss .feedzy-rss-col-1,
+.feedzy-rss .feedzy-rss-col-1{
+	width: 96%;
+}
 /* SCHIMBAT DIN ID in CLASA */
 .feedzy-rss .feedzy-rss-col-2,
 .feedzy-rss .feedzy-rss-col-3,
