--- a/includes/layouts/css/upsell.css
+++ b/includes/layouts/css/upsell.css
@@ -7,7 +7,6 @@
  */
 
 #fz-features .fz-features-header {
-	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	padding: 20px 30px 30px;
 	border-top: 5px solid #252b37;
@@ -54,7 +53,6 @@
 
 #fz-features .slogan a:focus {
 	outline: none;
-	-webkit-box-shadow: none;
 	box-shadow: none;
 }
 
@@ -103,13 +101,11 @@
 #fz-features .fz-feature {
 	display: table;
 	float: left;
-	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	width: 100%;
 	margin: 30px 0 0;
 	padding: 30px;
 	background-color: #fff;
-	-webkit-box-shadow: 0 1px 1px 0 rgba(0,0,0,0.1);
 	box-shadow: 0 1px 1px 0 rgba(0,0,0,0.1);
 }
 
@@ -121,7 +117,6 @@
 }
 
 #fz-features .fz-feature .fz-feature-features {
-	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	padding: 0 0 20px;
 }
@@ -217,22 +212,25 @@
 	}
 }
 
-#fz-features.fz-settings .fz-feature{
-	margin-top:0px;
-	border:none;
+#fz-features.fz-settings .fz-feature {
+	margin-top: 0;
+	border: none;
 }
-#fz-features.fz-settings  .nav-tab-wrapper{
+
+#fz-features.fz-settings  .nav-tab-wrapper {
 	border-bottom: none;
 }
+
 #fz-features.fz-settings   .nav-tab-wrapper a.nav-tab-active,
-#fz-features.fz-settings  .nav-tab-wrapper a:hover{
+#fz-features.fz-settings  .nav-tab-wrapper a:hover {
 	background: #fff;
 }
-#fz-features.fz-settings  .nav-tab-wrapper a{
+
+#fz-features.fz-settings  .nav-tab-wrapper a {
+	margin-top: 10px;
 	padding: 10px 20px;
-	background: #E0E0E0;
+	border: 0;
 	color: #000;
+	background: #e0e0e0;
 	box-shadow: 0 1px 1px 0 rgba(0,0,0,0.1);
-	margin-top:10px;
-	border:0px;
 }
