--- a/includes/gutenberg/src/style.scss
+++ b/includes/gutenberg/src/style.scss
@@ -22,3 +22,16 @@
 		width: auto;
 	}
 }
+
+.feedzy-rss {
+	.rss_image {
+		span.fetched {
+			display: inline-block;
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			background-position: 50%;
+			background-size: cover;
+		}
+	}
+}
