fix path of logo

--- a/css/settings.css
+++ b/css/settings.css
@@ -9,7 +9,7 @@
 	margin: 0 0 0 20px;
 	padding: 0 0 0 70px;
 	color: #3c3c3c;
-	background: url(../../../img/feedzy.svg) no-repeat left center;
+	background: url(../img/feedzy.svg) no-repeat left center;
 	background-size: 50px;
 	font-family: "Open Sans", sans-serif;
 	font-size: 2em;
