Add support for non English text while extracting full content
https://github.com/Codeinwp/feedzy-rss-feeds-pro/issues/327

--- a/includes/views/css/import-metabox-edit.css
+++ b/includes/views/css/import-metabox-edit.css
@@ -1849,6 +1849,14 @@ label {
 	font-weight: 300;
 }
 
+label.feedzy-sr-only {
+	font-weight: 400;
+}
+
+fieldset.feedzy-screen3 label.feedzy-sr-only {
+	font-size: larger;
+}
+
 button.btn {
 	min-width: 105px;
 	height: 44px;
